--- a/Project1.html
+++ b/Project1.html
@@ -8,11 +8,11 @@
 <body>
   <h1> Project Description </h1>
     <p>
-      You will write four to five paragraphs about your background
-      as well as your ambitions for this class and your career at
-      IIT and beyond. Begin by writing this in either simple plain text (.txt)
-      or Markdown (.md) in your text-editor of choice. Be sure to make frequent,
-      descriptive commits in Git as you write.
+      You will write four to five paragraphs about your background as well as
+      your ambitions for this class and your career at IIT and beyond. Begin by
+      writing this in either simple plain text (.txt) or Markdown (.md) in your
+      text-editor of choice. Be sure to make frequent, descriptive commits in
+      Git as you write.
 
       Once you have finished your plain-text version, use git tag to tag it as
       plain-text. You will then create a basic structured HTML page out of your
