edited Project layout

--- a/Project1.html
+++ b/Project1.html
@@ -1,10 +1,12 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <title> "Description of First Project."</title>
-  <meta chaset="utf-8" />
+  <title> "David Moreno"</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="screen.css">
 </head>
+
 <body>
   <h1> Project Description </h1>
     <p>
@@ -13,12 +15,16 @@
       writing this in either simple plain text (.txt) or Markdown (.md) in your
       text-editor of choice. Be sure to make frequent, descriptive commits in
       Git as you write.
-
+    </p>
+    <p>
       Once you have finished your plain-text version, use git tag to tag it as
       plain-text. You will then create a basic structured HTML page out of your
       plain-text work (revision to your content is encouraged), styled with a
       separate, basic stylesheet in CSS that is linked to your HTML via the
-      <link> tag. Commit this also to Git as you write.
+      "link" tag. Commit this also to Git as you write.
     </p>
+
+    <!-- TODO: [insert picture if any]-->
+
 </body>
 </html>
