--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
       Hello Everyone,
     </p>
     <p>
-      My name is David Moreno, and I am a third year Electrical and Computer Engineer by education. By credit however, I am considered a 4th year. This is because I transfered to IIT last fall after completing all of my general education requirements, with exception of the 300 level classes, at Elgin Community College. I think that my time at the community college was benificial, even though I have to graduate a year later than all my classmates from highschool.
+      My name is David Moreno, and I am a third year Electrical and Computer Engineer by education. However, by credit I am considered a 4th year. This is because I transfered to IIT last fall after compeleting all of my general education requirements, with exception of the 300 level classes, at Elgin Community College. I think that my time at the community college was benificial, even though I have to graduate a year later than all my classmates from highschool.
     </p>
+  </n>
     <p>
       During my time at the community college, I was able to find myself a career path that I was able to take seriously and persue with much tenacity. Such that if I had gone straight to university I would have not pushed myself to the extent that I have and would not have grown into the person that I am today. Being at IIT for a year, has been very challenging. I have made many friends that are naturally smarter than I can hope to ever be, but their brilliance has helped me push myself to strive for succses, rather than being crushed by the weight of my own weakness.
     </p>
     <p>
-      I currently am an active member, and soon to be lab manager, of Illionis Tech Robotics club, in which we hold two major events a year. The first of which is the pumpkin launch that we hold here on campus every fall. Last year our pumpkin launcher, C-Force, was so successfull that we sent the pumpkin 475 feet far. However, cool as the pumpkin launcher may sound, it is not our main attraction. Every spring the club competes against major universites throughout Illinois in the Midwestern Robotics Design Competition, MRDC for short. There, we modify and design multiple robots to fit the objective of the competition. </n> </n>
+      I currently am an active member, and soon to be lab manager, of Illionis Tech Robotics club, in which we hold two major events a year. The first of which is the pumpkin launch that we hold here on campus every fall. Last year our pumpkin launcher, C-Force, was so successfull that we sent the pumpkin 475 feet far. However, cool as the pumpkin launcher may sound, it is not our main attraction. Every spring the club competes against major universites throughout Illinois in the Midwestern Robotics Design Competition, MRDC for short. There, we modify and design multiple robots to fit the objective of the competition.
     </p>
     <p>
       By taking this course, I am hopefull that I can find inspiration the in programming that I had lost after taking a poorly taught CS class. Through learning to program in HTML, CSS, and JavaScript. By designing webpages, I am gaining a desired skill, that is not taught in my profession, but not unrelated. During the course of this semsester I am hopeful that I will learn many other valueable skills that will help me in future projects that I take on.
