added background colors, added photo, and improved the overall layout of the website

--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <head>
   <title> "David Moreno"</title>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <link rel="stylesheet" href="screen.css">
+  <!-- <link rel="stylesheet" href="//basehold.it/24"> -->
 </head>
 
 <body>
-  <h1> David Moreno </h1>
+  <header class="header">
+  <h1> Background and Ambitions </h1>
+</header>
 
-  <figure>
-  <!--
-    <img src="photo.jpg" alt= "title of photo">
-    <figcaption> Description of photo </figcaption>
-  -->
-  </figure>
+  <article class="contents">
+    <img class= "photo" src="photo.jpg">
 
     <p>
       Hello Everyone,
@@ -33,6 +32,6 @@
     <p>
       By taking this course, I am hopefull that I can find inspiration the in programming that I had lost after taking a poorly taught CS class. Through learning to program in HTML, CSS, and JavaScript. By designing webpages, I am gaining a desired skill, that is not taught in my profession, but not unrelated. During the course of this semsester I am hopeful that I will learn many other valueable skills that will help me in future projects that I take on.
       </p>
-
+</article>
 </body>
 </html>
